--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,12 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Dart Current File",
-      "request": "launch",
-      "type": "dart",
-      "program": "${file}",
-      "console": "terminal"
-    }
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Dart",
+            "type": "dart",
+            "request": "launch",
+            "program": "${file}",
+            "console": "terminal"
+        }
+    ]
 }
